frontend/test/should_fail/reuse_004.grg
using attrib_model_001;

rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;

	replace{
		x- f:NINT<e> ->y;
	}
}
